--- a/03_Secant.ipynb
+++ b/03_Secant.ipynb
@@ -88,7 +88,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Definicja metody siecznych:"
+    "### Metoda siecznych:"
    ]
   },
   {
@@ -189,7 +189,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Zastosowanie funkcji root z pakietu numpy"
+    "### Zastosowanie funkcji root z pakietu numpy:"
    ]
   },
   {
