--- a/01_Bisection.ipynb
+++ b/01_Bisection.ipynb
@@ -86,7 +86,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Definicja funkcji bisekcji:"
+    "### Metoda bisekcji:"
    ]
   },
   {
