--- a/101_InterpolationTrig.ipynb
+++ b/101_InterpolationTrig.ipynb
@@ -12,7 +12,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import sys\n",
+    "!{sys.executable} -m pip install numpy\n",
+    "!{sys.executable} -m pip install matplotlib\n",
+    "!{sys.executable} -m pip install scipy"
+   ]
   },
   {
    "cell_type": "code",
